@@ -24,7 +24,7 @@
 
     <property name="test.timeout" value="7200000"/>
     <property name="test.run.args" value="-client
-            -Xss4m -Xms64m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=300m
+            -Xss4m -Xms64m -Xmx512m
             -Dnetbeans.keyring.no.master=true
             -Xverify:none -Dsun.java2d.noddraw=true"/>
 
